--- a/assets/sosoares/css/styles-caixilharia.css
+++ b/assets/sosoares/css/styles-caixilharia.css
@@ -41,12 +41,8 @@
 
 
 /*============================= BODY ==============================================*/
-* {
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
+*, div {
+    -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
 body {
     background-color: #e8e8e8;
@@ -54,25 +50,30 @@ body {
     font-weight: 300;
     font-size: 16px;
     color: #494949;
+    min-width: 320px;
 }
-a:hover {
-    text-decoration: none;
-}
-header {
-    width: 100%;
-    height: 100px;
-    background-color: #054568;
-    padding: 15px;
-}
+a:hover {text-decoration: none}
+p {line-height: 1.8;}
 
-.font {
-    font-size: 50px;
-    color: #fff;
-    font-weight: 100;
-}
-.font-active {
-    color: #01aef0!important;
-}
+header {width: 100%;height: 100px;background-color: #054568;padding: 15px;}
+header .container .row {position: relative;min-height: 65px;}
+
+.logotipo {max-width: 210px;max-height: 47px;overflow: hidden;margin: 5px 0}
+.logotipo h1 {background: url("../img/logotipo.png") no-repeat;background-size: contain;text-indent: -99999px;width: 210px;height: 39px;margin: 0}
+
+.pages-img {display: inline-block;position:absolute;left:200px;margin: 5px;}
+.pages-img a {margin: 0 3px;}
+.font {font-size: 312.5%;color: #fff;font-weight: 100;}
+.font-active {color: #01aef0!important;}
+
+.form {width: 175px;display: inline-block;position: absolute;bottom: 0;right: 130px;}
+.form #search, .form #searchButton {background-color: #054667;display: inline-block;height: 34px;width: 86%;padding: 10px;color: #fff;border-radius: 5px;border: 1px solid #107ca4;}
+.form #searchButton {background-color: #107ca4;box-shadow: 0 3px 0 #05698e;height: 31px;width: 20%;border: 0;font-size: 18px;padding: 5px;margin: -3px 0 0 -15px;}
+.button {background-color: #107ca4;box-shadow: 0 3px 0 #05698e;color: #fff;border: 0;font-size: 16px;width: 107px;height: 31px;}
+#bd, #signIn {display: inline-block;position: absolute; right: 0;margin: 0}
+#bd img {margin: 0 0 0 3px;top:0}
+#signIn {bottom: 3px}
+
 footer {
     margin-top: 0px !important;
     padding-top: 25px;
@@ -81,284 +82,61 @@ footer {
     min-height: 250px;
     font-size: 14px;
 }
+footer b {font-weight: 700!important;font-size: 12px;}
+#group {font-weight: 900!important;font-size: 13px;}
+#date {text-align: right;font-weight: 700!important;font-size: 16px;}
+#text {vertical-align: top;}
 
-footer b {
-    font-weight: 700!important;
-    font-size: 12px;
-}
-
-#group {
-    font-weight: 900!important;
-    font-size: 13px;
-}
-
-p {
-    line-height: 1.8;
-}
-
-.content {
-    max-width: 1170px;
-    margin: auto;
-}
-
-#imgs img {
-    margin: 5px;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-}
-
-.button {
-    background-color: #107ca4;
-    box-shadow: 0 3px 0 #05698e;
-    color: #fff;
-    border: 0;
-    font-size: 16px;
-    width: 107px;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-}
-
-#search {
-    background-color: #054667;
-    width: 175px;
-    border-radius: 5px;
-    border: 1px solid #107ca4;
-    height: 35px;
-    padding: 10px;
-    color: #fff;
-    margin-top: 33px;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-}
-
-td {
-    padding: 10px;
-}
-
-#date {
-    text-align: right;
-    font-weight: 700!important;
-    font-size: 16px;
-}
-
-#text {
-    vertical-align: top;
-}
-
-.input {
-    background-color: #e8e8e8;
-    width: 247px;
-    height: 35px;
-    border-radius: 5px;
-    border: 1px solid #107ca4;
-    padding: 10px;
-}
-
-#contacts {
-    width: 100%;
-    display: inline-block;
-    font-size: 14px;
-    margin-top: 15px;
-}
-
-
-
-#bd {
-    display: inline-block;
-    margin: 5px;
-}
-
-.select
-{
-    background-color: #107ca4;
-}
+.input {background-color: #e8e8e8;width: 247px;height: 35px;border-radius: 5px;border: 1px solid #107ca4;padding: 10px;}
+#contacts {width: 100%;display: inline-block;font-size: 14px;margin-top: 15px;}
+.select {background-color: #107ca4;}
 
 .title1, .title2, .title3, .title4 {
-    color: #107ca4;
-    font-size: 26px;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
+    color: #107ca4;font-size: 26px;-webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
+.title1 {font-weight: 100!important;}
+.title2 {font-size: 18px;}
+.title3 {font-size: 36px;font-weight: 100!important;}
+.title4 {font-size: 22px;font-weight: 100!important;}
+.breadcrumb {background-color: #e8e8e8;margin-top: 15px;}
 
-.title1 {
-    font-weight: 100!important;
-}
+.portfolio img {margin: 10px;border-radius: 10px;}
+.descricao b {color: #107ca4;}
+.descricao li {list-style: none;}
+.descricao li:last-child {margin-bottom: 25px;}
 
-.title2 {
-    font-size: 18px;
-}
-
-.title3 {
-    font-size: 36px;
-    font-weight: 100!important;
-}
-
-.title4 {
-    font-size: 22px;
-    font-weight: 100!important;
-}
-
-.breadcrumb {
-    background-color: #e8e8e8;
-    margin-top: 15px;
-}
-
-.portfolio img {
-    margin: 10px;
-    border-radius: 10px;
-}
-
-.descricao b {
-    color: #107ca4;
-}
-
-.descricao li {
-    list-style: none;
-}
-
-.descricao li:last-child {
-    margin-bottom: 25px;
-}
-
-.related {
-    background-color: #d9d9d9;
-    width: 100%;
-    height: 400px;
-}
-
-#center {
-    margin: 100px auto 0;
-}
-
-.related img {
-    border-radius: 5px;
-}
-
-.related p {
-    margin-top: 15px;
-}
-
-.button2 {
-    width: 100%;
-    height: 45px;
-    margin: 5px;
-    text-align: left;
-    font-size: 18px;
-}
-
-.button3 {
-    background-color: transparent;
-}
+#center {margin: 100px auto 0;}
+.related {background-color: #d9d9d9;width: 100%;height: 400px;}
+.related img {border-radius: 5px;}
+.related p {margin-top: 15px;}
+.button2 {width: 100%;height: 45px;margin: 5px;text-align: left;font-size: 18px;}
+.button3 {background-color: transparent;}
 
 /*============================== NAV ========================================= */
-nav {
-    width: 100%;
-    height: 50px;
-    background-color: #016285;
-}
+nav {width: 100%;height: 50px;background-color: #016285;}
+nav a {color: #ff0;}
+.navbar {z-index: 1001!important;background-color: #016285;}
+nav a:hover {color: #fff;}
+.navbar-default {background-color: transparent;border: 0;}
+.navbar-nav > li > a {color: #fff !important;font-size: 16px;}
+.dropdown-menu {background-color: #107ca4;border: 0;border-radius: 0;}
 
-nav a {
-    color: #ff0;
-}
-.navbar {
-    z-index: 1001!important;
-    background-color: #016285;
-}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {background-color: #107ca4;}
 
-nav a:hover {
-    color: #fff;
-}
+.grid-demo .row [class*="col-"] {background-color: transparent;border: 0;color: #fff;}
+.grid-demo .row .row [class*="col-"] {border-left: 1px solid #16627e;padding-bottom: 10px;}
 
-.navbar-default {
-    background-color: transparent;
-    border: 0;
-}
+.menu-h3 {font-size: 12px;display: block;font-weight: 700!important;text-align: left;color: #003049;text-transform: uppercase;height: 35px;}
+.grid-demo li, .grid-demo li a {
+    font-size: 14px;line-height: 1.6;text-align: left;color: #fff;display: block;}
+.grid-demo li:last-child {margin-bottom: 15px;}
+.li-b {color: #003049;font-size: 12px;font-weight: normal!important;display: block;margin-bottom: 10px;}
+.grid-demo {max-width: 1020px;margin: 0 auto;}
+.navbar-collapse {max-width: 1020px;margin: 0 auto;}
 
-.navbar-nav > li > a {
-    color: #fff !important;
-    font-size: 16px;
-}
-
-.dropdown-menu {
-    background-color: #107ca4;
-    border: 0;
-    border-radius: 0;
-}
-
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-    background-color: #107ca4;
-}
-
-.grid-demo .row [class*="col-"] {
-    background-color: transparent;
-    border: 0;
-    color: #fff;
-}
-
-.grid-demo .row .row [class*="col-"] {
-    border-left: 1px solid #16627e;
-    padding-bottom: 10px;
-}
-
-.menu-h3 {
-    font-size: 12px;
-    display: block;
-    font-weight: 700!important;
-    text-align: left;
-    color: #003049;
-    text-transform: uppercase;
-    height: 35px;
-}
-
-.grid-demo li,
-.grid-demo li a {
-    font-size: 14px;
-    line-height: 1.6;
-    text-align: left;
-    color: #fff;
-    display: block;
-}
-
-.grid-demo li:last-child {
-    margin-bottom: 15px;
-}
-
-.li-b {
-    color: #003049;
-    font-size: 12px;
-    font-weight: normal!important;
-    display: block;
-    margin-bottom: 10px;
-}
-
-
-.grid-demo {
-    max-width: 1020px;
-    margin: 0 auto;
-}
-
-.navbar-collapse {
-    max-width: 1020px;
-    margin: 0 auto;
-}
-.curr {
-    background-color: #076e93;
-}
-nav .navbar-nav li:hover {
-    background-color: #107ca3;
-}
+.curr {background-color: #076e93;}
+nav .navbar-nav li:hover {background-color: #107ca3;}
 
 /*============================== SLIDER =======================================*/
 .carousel-caption {
@@ -370,131 +148,32 @@ nav .navbar-nav li:hover {
     max-width: 1170px;
     margin: 0 auto;
 }
-.slider-h1 {
-    font-weight: 100!important;
-    font-size: 30px;
-}
-.carousel-indicators li {
-    background-color: #004b67;
-    border: 0;
-}
-.carousel-indicators .active {
-    background-color: #969696;
-}
-.carousel-control {
-    border-radius: 10px;
-    width: 65px;
-    height: 65px;
-    display: inline-block;
-}
-.carousel-caption li {
-    display: inline-block;
-    height: 65px;
-}
-.control-try {
-    border-radius: 10px;
-    width: 65px;
-    height: 65px;
-    display: inline-block;
-    text-align: center;
-    color: #fff;
-    font-size: 30px;
-}
-.carousel-caption2 {
-    width: 120px !important;
-    height: 50px !important;
-    margin-right: -100px !important;
-    margin-left: auto !important;
-}
-.control-try2 {
-    height: 50px !important;
-    padding-top: 7px;
-    padding-left: 15px;
-    width: 50px !important;
-}
-.control-try3 {
-    bottom: auto;
-    top: 50% !important;
-    background-image: none !important;
-    font-size: 40px !important;
-}
-.carousel-caption ul {
-    margin-top: -23px !important;
-}
-.button_slider {
-    background-color: #107ca4;
-    box-shadow: 0 3px 0 #05698e;
-    color: #fff;
-    border: 0;
-    font-size: 16px;
-    width: 107px;
-    margin-top: 16px;
-    margin-right: 20px;
-}
-.carousel-inner > .item > img {
-    max-width: 100%;
-}
-.selected img {
-    opacity:0.5;
-}
-.carousel-control {
-    border-radius: 10px;
-    width: 65px;
-    height: 65px;
-    display: inline-block;
-}
-.controls{
-    margin-top: 120px;
-    background-image: none !important;
-}
-.icon-tras{
-    font-size: 33px;
-    padding-top: 14px;
-    padding-right: 30px;
-}
+.slider-h1 {font-weight: 100!important;font-size: 30px;}
+.carousel-indicators li {background-color: #004b67;border: 0;}
+.carousel-indicators .active {background-color: #969696;}
+.carousel-control {border-radius: 10px;width: 65px;height: 65px;display: inline-block;}
+.carousel-caption li {display: inline-block;height: 65px;}
 
-.icon-frente{
-    font-size: 33px;
-    padding-top: 14px;
-}
-.obras-list {
-    width: 250px;
-    height: 230px;
-    float: left;
-    margin: 12px;
-    position: relative;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-}
+.control-try {border-radius: 10px;width: 65px;height: 65px;display: inline-block;text-align: center;color: #fff;font-size: 30px;}
+.carousel-caption2 {width: 120px !important;height: 50px !important;margin-right: -100px !important;margin-left: auto !important;}
+.control-try2 {height: 50px !important;padding-top: 7px;padding-left: 15px;width: 50px !important;}
+.control-try3 {bottom: auto;top: 50% !important;background-image: none !important;font-size: 40px !important;}
+.carousel-caption ul {margin-top: -23px !important;}
 
-.obras-list img {
-    position: absolute;
-    /*width: 100%;*/
-    width: 250px;
-    height: 230px;
-    border-radius: 10px;
-}
-.obras-list p {
-    position: absolute;
-    z-index: 9;
-    font-size: 18px;
-    bottom: 0;
-    left: 19px;
-    width: 82%;
-    color: #FFFFFF !important;
-}
+.button_slider {background-color: #107ca4;box-shadow: 0 3px 0 #05698e;color: #fff;border: 0;font-size: 16px;width: 107px;margin-top: 16px;margin-right: 20px;}
+.carousel-inner > .item > img {max-width: 100%;}
+.selected img {opacity:0.5;}
+.carousel-control {border-radius: 10px;width: 65px;height: 65px;display: inline-block;}
+.controls{margin-top: 120px;background-image: none !important;}
+.icon-tras{font-size: 33px;padding-top: 14px;padding-right: 30px;}
+.icon-frente{font-size: 33px;padding-top: 14px;}
+
+.obras-list {width: 250px;height: 230px;float: left;margin: 12px;position: relative;box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;}
+.obras-list img {position: absolute;width: 250px;height: 230px;border-radius: 10px;}
+.obras-list p {position: absolute;z-index: 9;font-size: 18px;bottom: 0;left: 19px;width: 82%;color: #FFFFFF !important;}
 
 /*============================== MEDIA QUERIES ===================================*/
 @media (max-width: 1150px) {
-    header > .content > .container > .row .col-md-3,
-    header > .content > .container > .row .col-md-2,
-    header > .content > .container > .row .col-md-5
-            {position: absolute;display: inline-block;top: 20px;}
-    header > .content > .container > .row .col-md-5 {left: 250px;}
-    header > .content > .container > .row .col-md-2 {top: 0;right: 0;}
-    header .row .col-md-2:nth-child(3) {right: 180px!important;}
-
     .slider-h1 {font-size: 25px;}
     .title1 {margin: 20px 20px 10px;}
     .col-md-4 .title1 {margin: 20px 0 10px;}
@@ -502,8 +181,6 @@ nav .navbar-nav li:hover {
 }
 
 @media (max-width: 991px) {
-    header > .content > .container > .row .col-md-2:nth-child(3) {right: 110px!important;}
-
     section > .container > .row .col-md-8 {display: inline-block;width: 55%;vertical-align: top;}
     section > .container > .row .col-md-4 {display: inline-block;width: 40%;vertical-align: top;}
 
@@ -512,71 +189,41 @@ nav .navbar-nav li:hover {
     footer > .content > .container > .row > #contacts [class^="col-"],
     footer > .content > .container > .row > #contacts [class*="col-"] {display: inline-block;}
     footer .col-md-9 {width: 45%;}
-    .carousel-caption {
-        margin: 0 -70px;
-        width: 80%;
-    }
+
+    .carousel-caption {margin: 0 -70px;width: 80%;}
     .slider-h1 {font-size: 30px;}
-    .navbar-nav > li > a {
-        font-size: 14px;
-        padding: 15px 10px;
-    }
+    .navbar-nav > li > a {font-size: 14px;padding: 15px 10px;}
 }
 @media (max-width: 800px) {
-    header {
-        height: 200px;
-    }
-    header > .content > .container > .row .col-md-5 {top: 90px;left: 0;}
-    .carousel-caption {
-        margin: 0 -70px;
-        width: 85%;
-    }
+    header {height: 140px;}
+    header .row .pages-img {top: 50px;left: -10px;}
+
+    .carousel-caption {margin: 0 -70px;width: 85%;}
     footer .col-md-9 {width: 40%;}
 }
-
 @media (max-width: 768px) {
-
-    .content, .input, #contacts {
-        width: 100% !important;
-    }
-
-    .nav > li {
-        background-color: #016285;
-    }
-    .yamm .dropdown.yamm-fw .dropdown-menu {
-        display: none;
-    }
-
-    .carousel-caption {
-        display: none;
-    }
-
-    header {
-        height: 160px;
-    }
+    .content, .input, #contacts {width: 100% !important;}
+    .nav > li {background-color: #016285;}
+    .yamm .dropdown.yamm-fw .dropdown-menu {display: none;}
+    .carousel-caption {display: none;}
 
     section > .container > .row .col-md-8, section > .container > .row .col-md-4 {display: block; width: 100%}
 
-
-    footer > .content > .container > .row .col-md-9 {
-        width: 100%;
-        text-align: center;
-    }
-    footer > .content > .container > .row .col-md-3 {
-        display: none;
-    }
+    footer > .content > .container > .row .col-md-9 {width: 100%;text-align: center;}
+    footer > .content > .container > .row .col-md-3 {display: none;}
     footer > .content > .container > .row > #contacts [class^="col-"],
     footer > .content > .container > .row > #contacts [class*="col-"] {display: block;text-align: center;}
-
     footer > .content > .container > .row > #contacts .col-md-1 {display: none}
 }
 @media (max-width: 580px) {
-    header > .content > .container > .row .col-md-2:nth-child(3) {top:60px;right: 0!important;}
+    header .row .form {bottom:-50px;right: 0;}
+    .carousel-indicators {text-align: right;}
 }
-/*
-
-@media (max-width: 990px) {
-    #date {
-        text-align: left;
-    }
-}*/
+@media (max-width: 450px) {
+    header {height: 160px;}
+    header .logotipo, header .logotipo h1 {width: 150px;}
+    .font {font-size: 220%;margin: 0 2px}
+    .pages-img a {margin: 0}
+    header .form {width: 100%;display: block;top: 100px;left: 0!important;}
+    header .form #search {width: 83%;display: inline-block;}
+}
