--- a/assets/sosoares/styles.css
+++ b/assets/sosoares/styles.css
@@ -32,65 +32,30 @@
 }
 
 /*============================== BODY =======================================*/
+*, div {
+    -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
+}
 body {
-    background: url("img/Castoral.jpg") #e8e8e8 no-repeat fixed center;
-    background-size: cover;
-    font-family: 'SourceSansPro', Arial, sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    color: #494949;
+    background: url("img/Castoral.jpg") #e8e8e8 no-repeat fixed center;background-size: cover;font-family: 'SourceSansPro', Arial, sans-serif;
+    font-weight: 300;font-size: 14px;color: #494949;min-width: 320px;min-height: 600px;
 }
 
-a:hover {
-    text-decoration: none;
-}
+a:hover {text-decoration: none;}
 header {width:100%;height:100px;padding:15px;}
-footer {
-    background-color:#f0f0f0;
-    width:100%;
-    height:90px;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
+footer {background-color:#f0f0f0;width:100%;height:90px;
+    -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
 #bottom {position:fixed;bottom:0;}
 footer .content {padding-top:25px;}
 p {line-height:1.8;}
-.button {
-    background-color:#107ca4!important;
-    box-shadow: 0 3px 0 #05698e!important;
-    color:#fff!important;
-    border:0;
-    font-size:14px!important;
-    width:107px!important;
-}
+.button {background-color:#107ca4!important;box-shadow: 0 3px 0 #05698e!important;color:#fff!important;border:0;font-size:14px!important;width:107px!important;}
 footer b {font-weight: 700;}
-#bd {
-    float: right;
-    display: inline-block;
-    margin: 5px;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
+#bd {float: right;display: inline-block;margin: 5px;
+    -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
 /*============================== CAIXAS =======================================*/
-.box {
-    width: 165px;
-    height: 160px;
-    display: inline-block;
-    border-radius: 5px;
-    margin: 15px;
-    text-align: center;
-    padding: 30px 15px;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
+.box {width: 165px;height: 160px;display: inline-block;border-radius: 5px;margin: 15px;text-align: center;padding: 30px 15px;
+    -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
 }
 #caixilharia {background-color:#107ca4;box-shadow: 0 8px 0 #05698e;}
 #caixilharia:hover {background-color:#05698e;box-shadow: 0 8px 0 #05698e;transition: 0.7s;-webkit-transition: 0.7s;}
@@ -103,37 +68,10 @@ footer b {font-weight: 700;}
 
 .center {width: 70%;margin: 0 auto 100px;padding: 15px 0;}
 #separador {display: none;}
-h3 {
-    color: #fff;
-    font-size: 17px;
-    font-weight: normal;
-    margin: 10px auto;
-    width: 100%;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-}
-.valign {
-    vertical-align: top;
-    display: inline-block;
-    padding: 5px 0;
-    height: 34px;
-}
+h3 {color: #fff;font-size: 17px;font-weight: normal;margin: 10px auto;width: 100%;}
+.valign {vertical-align: top;display: inline-block;padding: 5px 0;height: 34px;}
 h4 {display: inline-block;color: #494949;font-size: 13px;font-weight: 900;margin: 0}
-.section {
-    position: absolute;
-    top: 35%!important;
-    right: 0;
-    left: 0;
-    -webkit-transition: all 300ms linear;
-    -moz-transition: all 300ms linear;
-    -o-transition: all 300ms linear;
-    -ms-transition: all 300ms linear;
-    transition: all 300ms linear;
-    vertical-align: top;
-}
+.section {position: absolute;top: 35%!important;right: 0;left: 0;vertical-align: top;}
 .font {font-size: 70px;color: #fff;}
 
 /*============================== MEDIA QUERIES =======================================*/
@@ -157,16 +95,13 @@ h4 {display: inline-block;color: #494949;font-size: 13px;font-weight: 900;margin
 }
 @media (max-width: 768px) {
     .section {position: static;}
-    .center {margin: 0 auto 30px;}
+    .center {margin: 0 auto 150px;}
     .box {width: 165px;height: 160px;}
     h3 {font-size: 17px;}
     #separador {display: block;background-color: transparent;border: 0;}
     .vanish .col-md-2:nth-child(3) {display: none!important;}
     footer#bottom {position: fixed;height: 150px;}
     footer#bottom .col-md-1 {text-align: center;width: 100%;display: block;}
-}
-@media (min-height: 768px) {
-    footer#bottom {position: fixed;bottom: 0;}
 }
 @media (max-width: 450px){
     header {min-height: 100px;}
@@ -175,11 +110,12 @@ h4 {display: inline-block;color: #494949;font-size: 13px;font-weight: 900;margin
     .box {width: 140px;height: 145px;}
     h3 {font-size: 13px;}
     .vanish {display: none;}
-    footer#bottom {position: fixed;height: 110px;}
+    footer#bottom {min-height: 110px;}
+    .icon-sosoares {font-size: 20px!important;}
 }
 @media (max-width: 420px) {
     #bd {position: static;float: none;margin-top: 15px;}
-    footer#bottom {font-size: 12px;height: 120px;}
+    footer#bottom {font-size: 12px;}
 }
 @media (max-width: 390px){
     .box {width: 120px;height: 125px;}
@@ -189,4 +125,7 @@ h4 {display: inline-block;color: #494949;font-size: 13px;font-weight: 900;margin
     .box {width: 45%;height: 125px;margin: 5px;}
     h3 {font-size: 13px;font-weight: 300;}
     .font {font-size: 50px}
+    .icon-sosoares {font-size: 15px!important;}
+    .valign {width: 80%;min-height: 34px}
+    footer#bottom .col-md-1 {margin-top: 34px}
 }
