--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -229,3 +229,16 @@ nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-defau
     header .form {width: 100%;display: block;top: 100px;left: 0!important;}
     header .form #search {width: 83%;display: inline-block;}
 }
+
+/* **************************** MAPS ********************************** */
+#map-canvas {
+    width: 100%;
+    height: 500px;
+    display: block;
+}
+div#map, div#map div {
+    -moz-transition: none;
+    -webkit-transition: none;
+    -o-transition: color 0 ease-in;
+    transition: none;
+}
