--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -120,7 +120,7 @@ nav {width: 100%;height: 50px;background-color: #016285;}
 nav a {color: #ff0;}
 .navbar {z-index: 1001!important;background-color: #016285;}
 nav a:hover {color: #fff;}
-.navbar-default {background-color: transparent;border: 0;}
+.navbar-default {border: 0;}
 .navbar-nav > li > a {color: #fff !important;font-size: 16px;}
 .dropdown-menu {background-color: #107ca4;border: 0;border-radius: 0;}
 
@@ -189,6 +189,12 @@ div#map, div#map div {
     -webkit-transition: none;
     -o-transition: color 0 ease-in;
     transition: none;
+}
+
+/*============================== CANDIDATURAS ===================================*/
+
+.candidaturas .form-group {
+    height: 25px;
 }
 
 /*============================== MEDIA QUERIES ===================================*/
