--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -148,7 +148,7 @@ nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-defau
     text-align: left;
     height: 65px;
     max-width: 1170px;
-    margin: 0 auto;
+    margin: 20px auto;
     right: 0;
     left: 0;
 }
@@ -159,7 +159,7 @@ nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-defau
 .carousel-caption li {display: inline-block;height: 65px;}
 
 .control-try {border-radius: 10px;width: 65px;height: 65px;display: inline-block;text-align: center;color: #fff;font-size: 30px;}
-.carousel-caption2 {width: 120px !important;height: 50px !important;margin-right: -100px !important;margin-left: auto !important; right: 20%; left: 20%;}
+.carousel-caption2 {width: 120px !important;height: 50px !important;margin: -20px -100px 0 auto !important; right: 20%; left: 20%;}
 .control-try2 {height: 50px !important;padding-top: 13px;padding-left: 15px;width: 50px !important;}
 .control-try3 {bottom: auto;top: 50% !important;background-image: none !important;font-size: 40px !important;}
 .carousel-caption ul {margin-top: -23px !important;}
