--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -203,7 +203,10 @@ hr.divider {
     margin: -10px 0 40px !important;
 }
 
-.contactus .row.contactos {margin: 30px -15px;}
+.contactus > .row {margin: 30px 0;}
+.contactus > .row h3 {margin-top: 15px;}
+.contactus > .row > .col-md-6 input, .contactus > .row > .col-md-6 textarea, .contactus > .row > .col-md-6 select {margin: 0 0 8px;}
+.contactus > .row > .col-md-6 label {padding: 10px 0 8px;margin: 0;}
 
 /*============================== CANDIDATURAS ===================================*/
 
